--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,12 +1,18 @@
 <table class="table">
-    <thead>
-        <tr>
-            <th>Marka Id</th>
-            <th>Marka Adı</th>
-        </tr>
-    </thead>
-    <tr *ngFor="let brand of brands">
-        <td>{{brand.brandId}}</td>
-        <td>{{brand.brandName}}</td>
+  <thead>
+    <tr>
+      <th>Markalar</th>
     </tr>
+  </thead>
 </table>
+<ul class="list-group">
+  <li 
+    routerLink = "/cars/brand/{{brand.brandId}}"
+    (click)="setCurrentBrand(brand)"
+    *ngFor="let brand of brands"
+    [class]="getCurrentBrandClass(brand)"
+  >
+    {{ brand.brandName }}
+  </li>
+</ul>
+<h5 *ngIf="currentBrand">{{currentBrand.brandName}} Seçtiniz</h5>
