--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,13 @@
     <div class="row">
         <div class="col-md-3">
             <app-brand></app-brand>
-            <app-customer></app-customer>
-        </div>
-        <div class="col-md-9">
             <app-color></app-color>
-            <app-car></app-car>
-            <app-rental></app-rental>
+        </div>
+        <div class="col-md-9">            
+            <router-outlet></router-outlet>
+            <!-- <app-rental></app-rental> -->
         </div>
     </div>
     
-    <router-outlet></router-outlet>
+    
 </div>
