--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,12 +1,14 @@
 <table class="table">
-    <thead>
-        <tr>
-            <th>Renk Id</th>
-            <th>Renk Adı</th>
-        </tr>
-    </thead>
-    <tr *ngFor="let color of colors">
-        <td>{{color.colorId}}</td>
-        <td>{{color.colorName}}</td>
+  <thead>
+    <tr>
+      <th>Renkler</th>
     </tr>
+  </thead>
 </table>
+<ul class="list-group">
+  <li routerLink="/cars/color/{{color.colorId}}"
+  (click)="setCurrentColor(color)"
+  *ngFor="let color of colors" 
+  [class]="getCurrentColorClass(color)">{{ color.colorName }}</li>
+</ul>
+<h5 *ngIf="currentColor">{{currentColor.colorName}} seçtiniz</h5>
